# v-jepa-interpretability

./: .gitignore  FINDINGS.md  README.md  SETUP.md  pyproject.toml
demo/: app.py  video_utils.py
scripts/: build_index.py  extract_features.py  make_mini_dataset.py  run_demo.sh
src/: attention.py  embeddings.py  masking.py  model.py  probe.py  retrieval.py
